[BUG] Activities not showing price at Add extras page

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -307,6 +307,14 @@ a.btn.btn-voyage {
   }
 }
 
+.view-price {
+  color: #000;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+  margin-top: 26px;
+  font-size: 25px;
+}
+
 /*===========================================================
 =            Section comment presentation-header            =
 ===========================================================*/
